--- a/source/_posts/UVa10041.md
+++ b/source/_posts/UVa10041.md
@@ -7,102 +7,52 @@ tags:
 categories:
   - Programming
 ---
-## Problem
-Have you heard the fact “The base of every normal number system is 10”? Of course, I am not talking about number systems like Stern Brockot Number System. This problem has nothing to do with this fact but may have some similarity.
-You will be given an N based integer number R and you are given the guaranty that R is divisible by (N − 1). You will have to print the smallest possible value for N. The range for N is 2 ≤ N ≤ 62 and the digit symbols for 62 based number is (0..9 and A..Z and a..z). Similarly, the digit symbols for 61 based number system is 0..9 and A..Z and a..y) and so on.
+[10041 - Vito's Family](https://onlinejudge.org/index.php?option=com_onlinejudge&Itemid=8&page=show_problem&problem=982 "Title")
 
-#### Input
-Each line in the input file will contain an integer (as defined in mathematics) number of any integer base (2..62). You will have to determine what is the smallest possible base of that number for the given conditions. No invalid number will be given as input.
+## 題意
+某黑幫老大要搬家到有他所有家人居住的一條街上，因為他會經常拜訪所有親戚，需找到一個能讓他總路程最少的地方居住。你需要找到這個地方，並輸出黑幫老大到每個家人家的距離總和。
 
-#### Output
-If number with such condition is not possible output the line ‘such number is impossible!’ For each line of input there will be only a single line of output. The output will always be in decimal number system.
-
-#### Sample Input
-``` plain text
-2
-2 2 4
-3 2 4 6
-```
-
-#### Sample Output
-``` plain text
-2
-4
-```
-
-## Note & Code
-{% note default  %}
-因為是找最短距離，所以必須要用「中位數」而不是「平均數」，假如親戚分別住 1,2,100，用平均數就會走更遠。
+## 解法
+{% note  %}
+因為是找最短距離，所以必須要用「中位數」而不是「平均數」，假如親戚分別住 1,2,100，用平均數總距離就會更遠。
 {% endnote %}
+我用vector把所有輸入的數存起來，因為無法確定會不會按照大小排序，輸入完成後，用sort將vector內容由小到大排序。
+接下來判斷vector長度是否為偶數，再找出中位數。
+找出中位數後就容易了～把所有vector裡的元素和中位數相減，取絕對值，就能得到答案。
 
-#### My Code
+## Code
 ```cpp
 #include<iostream>
 #include<vector>
-
-using namespace std;
-
-int main(){
-    int testCases;
-    cin>>testCases;
-    for(int i=0;i<testCases;i++){
-        int rel,mid,ans=0;
-        cin>>rel;
-        vector<int> numbers(rel);
-        
-        for(int j=0;j<rel;j++){
-            cin>>numbers[j];
-        }
-    
-        for(int j=0;j<rel-1;j++){
-            for(int x=0;x<rel-1;x++){
-                if(numbers[x]>numbers[x+1]){
-                    swap(numbers[x],numbers[x+1]);
-                }
-            }
-        }
-        
-        if(rel%2==1){
-            mid=numbers[rel/2];
-        }
-        else{
-            mid=(numbers[rel/2-1]+numbers[rel/2])/2;
-        }
-        
-        for(int ni:numbers){
-            ans+=abs(ni-mid);
-        }
-        cout<<ans<<endl;
-    }
-    return 0;
-}
-```
-
-#### Solution
-```cpp
-#include<iostream>
-#include<vector>
+#include<cstdio>
 #include<algorithm>
 
 using namespace std;
 
 int main(){
-    int testCases;
-    cin>>testCases;
-    for(int i=0;i<testCases;i++){
-        int rel,mid,ans=0;
-        cin>>rel;
-        vector<int> numbers(rel);
-        for(int j=0;j<rel;j++){
-            cin>>numbers[j];
+    int cas,n,temp,center,sum;
+    vector<int> num;
+    
+    scanf("%d",&cas);
+    while(cas--){
+        sum=0;
+        
+        scanf("%d",&n);
+        for(int i=0;i<n;i++){
+            scanf("%d",&temp);
+            num.push_back(temp);
         }
-        sort(numbers.begin(),numbers.end());
-        mid=numbers[rel/2];
-        for(int ni:numbers){
-            ans+=abs(ni-mid);
-        }
-        cout<<ans<<endl;
+        sort(num.begin(),num.end());
+        
+        if(num.size()%2==0) center = (num[n/2-1]+num[n/2])/2;
+        else center = num[n/2];
+        
+        for(int i=0;i<n;i++) sum+=abs(num[i]-center);
+        printf("%d\n",sum);
+        
+        num.clear();
     }
+    
     return 0;
 }
 ```
